| Summary: | ASTERISK-27366: Asterisk Turkish Language Set Problem | ||
| Reporter: | Halil İbrahim YILDIZ (pheomis) | Labels: | patch |
| Date Opened: | 2017-10-21 04:07:22 | Date Closed: | 2018-01-02 08:07:39.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Addons/cdr_mysql |
| Versions: | 13.2.1 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Debian | Attachments: | ( 0) 0001-cdr_mysql-Make-sure-connection-charset-is-always-set.patch ( 1) asterisk_cdr.jpg ( 2) debug_log_123456.txt |
| Description: | Hi,
My problem is Turkish language pack installing but the character set is corrupted. I selected UTF-8 all of them | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-21 04:07:23.317-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2017-10-22 17:31:45.769-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. Please read over the Asterisk Issue Guidelines [1] which discusses the information necessary for your issue to be resolved and the format that information needs to be in. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. The specific steps or actions you took that caused you to encounter the problem. 2. The behavior you expected and the location of documentation that led you to that expectation. 3. The behavior you actually encountered. To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. If applicable, please ensure that protocol-level trace debugging is enabled, e.g., 'sip set debug on' if the issue involves chan_sip, and configuration information such as dialplan and channel configuration. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines [2] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Halil İbrahim YILDIZ (pheomis) 2017-10-23 01:47:12.028-0500 I have this problem in the clid column in the cdr table. Sample Data: "Sinan LezgioÄŸlu" <1005> be "Sinan Lezgioğlu" <1005> The data is deteriorating every 2 days. Restart is improving. By: Kevin Harwell (kharwell) 2017-10-23 17:59:39.307-0500 Unfortunately the extra information you provided still doesn't help. As [~jcolp] stated we'll need specific steps in order to reproduce this issue and a debug log. Links can be found in his earlier comment. By: Halil İbrahim YILDIZ (pheomis) 2017-10-31 02:35:53.476-0500 "Sinan LEZGİOĞLU" <150> Because you will insert this "Sinan LEZGİOÄžLU" <150> By: Halil İbrahim YILDIZ (pheomis) 2017-10-31 02:36:17.105-0500 Log file insert By: Asterisk Team (asteriskteam) 2017-11-14 12:00:00.513-0600 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Kevin Harwell (kharwell) 2017-11-14 12:10:45.745-0600 Reopened issue for triage as the reported had added more information, but had not been re-triaged. By: Joshua C. Colp (jcolp) 2017-12-06 17:49:43.976-0600 How is the callerid received? Is it transported over the chan_sip call? Have you explicitly configured it? We don't really support international characters like this. By: Sean Bright (seanbright) 2017-12-08 15:59:31.734-0600 What is the {{charset}} set to in your {{cdr_mysql.conf}} file? By: Halil İbrahim YILDIZ (pheomis) 2017-12-09 08:43:33.298-0600 "charset=utf8" After 1 day the character sets are restored when you restart. By: Sean Bright (seanbright) 2017-12-13 15:02:43.891-0600 Re-attached debug log as a .txt file By: Sean Bright (seanbright) 2017-12-13 15:50:48.254-0600 [~pheomis], can you please try the attached patch ([^0001-cdr_mysql-Make-sure-connection-charset-is-always-set.patch]) and report back your results? By: Halil İbrahim YILDIZ (pheomis) 2017-12-14 07:23:24.474-0600 Dear @Sean, thank you for your help. This is the patch output. We have made our update. It gave below output. it is working now. The problem is clear in 1 week. I will test and inform you. patching file cdr_mysql.c Hunk #4 succeeded at 498 (offset -10 lines). Hunk #5 succeeded at 536 (offset -12 lines). Hunk #6 succeeded at 570 (offset -12 lines). Hunk #7 succeeded at 582 (offset -12 lines). Thank you By: Sean Bright (seanbright) 2017-12-27 11:45:18.922-0600 [~pheomis], does the patch I provided fix the issue you were having? By: Halil İbrahim YILDIZ (pheomis) 2017-12-28 02:39:47.726-0600 Dear @Sean Thank you for your help. I think that the problem is resolved. Thank you for everything. By: Friendly Automation (friendly-automation) 2018-01-02 06:55:30.953-0600 Change 7756 merged by Jenkins2: cdr_mysql: Make sure connection charset is always set [https://gerrit.asterisk.org/7756|https://gerrit.asterisk.org/7756] By: Friendly Automation (friendly-automation) 2018-01-02 07:49:22.617-0600 Change 7757 merged by Joshua Colp: cdr_mysql: Make sure connection charset is always set [https://gerrit.asterisk.org/7757|https://gerrit.asterisk.org/7757] By: Friendly Automation (friendly-automation) 2018-01-02 07:49:33.142-0600 Change 7758 merged by Joshua Colp: cdr_mysql: Make sure connection charset is always set [https://gerrit.asterisk.org/7758|https://gerrit.asterisk.org/7758] | ||